fix: delete user accept param
