# api/docs/swagger.json
@@ -63,13 +63,11 @@
                 "summary": "Deletes the user",
                 "parameters": [
                     {
-                        "description": " ",
-                        "name": "Body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.DeleteUserRequest"
-                        }
+                        "type": "string",
+                        "description": "User Id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -106,7 +104,10 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/controllers.GetUsers.User"
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/controllers.GetUsers.User"
+                                }
                             }
                         }
                     },
@@ -236,7 +237,10 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Role"
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/models.Role"
+                                }
                             }
                         }
                     },
@@ -306,17 +310,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.DeleteUserRequest": {
-            "type": "object",
-            "required": [
-                "userId"
-            ],
-            "properties": {
-                "userId": {
                     "type": "string"
                 }
             }
